--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
   <!-- Bootstrap -->
   <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css"/>
 
@@ -25,6 +25,7 @@
 
   <!-- Custom stlylesheet -->
   <link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+  
 </head>
 <body>
   <app-root></app-root>
